--- a/backend/mx.ini
+++ b/backend/mx.ini
@@ -14,3 +14,8 @@
 ; pushurl = git@github.com:collective/example.contenttype.git
 ; extras = test
 ; branch = feature-7
+
+; [juizi.templates]
+; url = git@github.com:jbeyers/juizi.templates.git
+; pushurl = git@github.com:jbeyers/juizi.templates.git
+; branch = python3
