--- a/backend/mx.ini
+++ b/backend/mx.ini
@@ -15,6 +15,11 @@
 ; extras = test
 ; branch = feature-7
 
+[juizi.reports]
+url = git@github.com:jbeyers/juizi.reports.git
+pushurl = git@github.com:jbeyers/juizi.reports.git
+branch = main
+
 ; [juizi.templates]
 ; url = git@github.com:jbeyers/juizi.templates.git
 ; pushurl = git@github.com:jbeyers/juizi.templates.git
