--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,9 +14,10 @@ RUN rm -rf src/p22
 
 # Install local requirements and fix permissions
 RUN <<EOT
-    ./bin/pip install mxdev
-    mv requirements-docker.txt requirements.txt
-    ./bin/mxdev -c mx.ini
-    ./bin/pip install -r requirements-mxdev.txt
+    # ./bin/pip install mxdev
+    # mv requirements-docker.txt requirements.txt
+    # ./bin/mxdev -c mx.ini
+    # ./bin/pip install -r requirements-mxdev.txt
+    pip install -r requirements-mxdev.txt
     chown -R plone: /app
 EOT
