--- a/backend/instance.yaml
+++ b/backend/instance.yaml
@@ -3,6 +3,6 @@ default_context:
     initial_user_password: 'zarquonbazilis'
 
     load_zcml:
-        package_includes: ['collective.easyform', 'eea.facetednavigation']
+        package_includes: []
 
     db_storage: direct
