--- a/frontend/src/addons/volto-p22/package.json
+++ b/frontend/src/addons/volto-p22/package.json
@@ -22,8 +22,8 @@
     "release-rc": "release-it --preRelease=rc"
   },
   "devDependencies": {
-    "@plone/scripts": "^3.3.2",
     "@babel/eslint-parser": "7.22.15",
+    "@plone/scripts": "^3.3.2",
     "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-react-app": "7.0.1",
@@ -52,7 +52,7 @@
   ],
   "dependencies": {
     "@eeacms/volto-accordion-block": "*",
-    "@kitconcept/volto-slider-block": "*",
-    "@eeacms/volto-matomo": "*"
+    "@eeacms/volto-matomo": "*",
+    "@kitconcept/volto-slider-block": "*"
   }
 }
