--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,4 @@ flake8-pyproject
 collective.volto.dropdownmenu==1.3.2
 collective.exportimport==1.13
 collective.taxonomy==3.1.5
+collective.volto.formsupport==3.2.1
